# codemp-proto

./: .editorconfig  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
proto/: auth.proto  buffer.proto  common.proto  cursor.proto  files.proto  session.proto  workspace.proto
src/: lib.rs
