[package]
name = "codemp-proto"
description = "protocol definitions for codemp -- code multiplexer"
homepage = "https://codemp.dev"
repository = "https://github.com/hexedtech/codemp-proto"
authors = [
	"alemi <me@alemi.dev>",
	"zaaarf <me@zaaarf.foo>",
	"frelodev <frelodev@gmail.com>",
	"cschen <cschen@codemp.dev>"
]
license = "GPL-3.0-only"
version = "0.7.0"
edition = "2021"

[lib]
name = "codemp_proto"

[dependencies]
prost = "0.13"
tonic = "0.12"
uuid = "1.7"

[build-dependencies]
tonic-build = "0.12"
