[package]
name = "codemp-proto"
description = "protocol definitions for codemp -- code multiplexer"
homepage = "https://code.mp"
repository = "https://github.com/hexedtech/codemp-proto"
authors = [
	"alemi <me@alemi.dev>",
	"zaaarf <me@zaaarf.foo>",
	"frelodev <frelodev@gmail.com>",
	"cschen <cschen@codemp.dev>"
]
license = "GPL-3.0-only"
version = "0.7.1"
edition = "2021"

[lib]
name = "codemp_proto"

[dependencies]
prost = "0.13"
uuid = "1.10"
tonic = { version = "0.12", default-features = false, features = ["codegen", "prost"] }

[build-dependencies]
tonic-build = "0.12"

[features]
default = ["client"]
client = ["tonic/transport"]
server = ["tonic/transport"]
